Added javascript for username ,and picture changing

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 			<p> all of which make me happy. IF you want to try your own hand at coding. Follow the link below, and join The Odin Project</p>
 		<a href="http://www.theodinproject.com">Learn to code.</a>
 
-		
+		<button>Change User</button>
 		<script src="scripts/main.js"></script>
 		
 
