Reworded a few things

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 				<li>Personal Growth</li>
 			</ul>
 
-			<p> all of which make me happy. IF you want to try your own hand at coding. Follow the link below, and join The Odin Project</p>
-		<a href="http://www.theodinproject.com">Learn to code.</a>
+			<p> all of which make me happy. IF you want to try your own hand at coding. Follow this <a href="http://www.theodinproject.com">link</a> and join The Odin Project</p>
+		
 
 		<button>Change User</button>
 		<script src="scripts/main.js"></script>
